--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
     <div class="container header_container">
         <h5>Hello I'm</h5>
         <h1>Paras Bhardwaj</h1>
-        <h5 class="text-light">Angular Developer</h5>
+        <h5 class="text-light">Web Developer</h5>
 
         <app-cta></app-cta>
         <app-header-socials></app-header-socials>
