updated on 3rd sept

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -12,7 +12,7 @@
                 <article class="about__card">
                     <i class="fa fa-suitcase about__icon" aria-hidden="true"></i>
                     <h5>Experience</h5>
-                    <small>2+ Years Working</small>
+                    <small>3+ Years Working</small>
                 </article>
                 
                 <article class="about__card">
@@ -24,7 +24,7 @@
             <p>
                 To seek and maintain full-time position in IT industry that offers professional challenges
                 utilizing interpersonal skills, excellent time management and problem-solving skills.
-                Have clear understanding of Web Development and trained as angular developer.
+                Have clear understanding of Web Development and trained as full stack developer.
                 Motivated to learn, grow and excel in Software Industry.
             </p>
             <a href="#contact" class="btn btn-primary">Let's Talk</a>
