--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -65,6 +65,10 @@
                 </li>
                 <li>
                     <i class="fa fa-check skill__list__icon" aria-hidden="true"></i>
+                    <p>Kubernetes</p>
+                </li>
+                <li>
+                    <i class="fa fa-check skill__list__icon" aria-hidden="true"></i>
                     <p>Problem Solving</p>
                 </li>
                 <li>
